# service_window_kandae

./: README.md  main.py  pyproject.toml
kandae/: kandae.py  service_window.py
tests/kandae/: test_kandae.py
