[tool.poetry]
name = "kandae_service_windows"
version = "1.0.0"
description = "Kandae algorithm for service windows"
authors = ["alan_ponte@goodyear.com"]

[tool.poetry.dependencies]
python = "^3.9.0"
Flask = "2.2.5"
openpyxl = "^3.0.9"
boto3 = "^1.34.39"
# connexion is a library that sits on top of Flask and implements OpenAPI/Swagger web applications.
connexion = "^2.13.1"
pytz = "^2022.7.1"
types-pytz="^2022.7.1.0"
requests = "^2.29.0"
psycopg2-binary = "^2.9.1"
python-dotenv = "^0.19.0"
python-json-logger = "^2.0.2"
# For swagger-ui
swagger-ui-bundle = "^0.0.9"
# Sqlalchemy
sqlalchemy = "^1.4.46"
timezonefinder = "6.1.10"
geopy = "^2.2.0"
more-itertools = "^8.10.0"
Flask-Cors = "^3.0.10"
retry = "^0.9.2"
freezegun = "1.1.0"
launchdarkly-server-sdk = "7.3.0"
python-dateutil="^2.8.2"
# SortedContainers is an Apache2 licensed Python sorted collections library
sortedcontainers="^2.4.0"
types-python-dateutil="^2.8.19.6"
uWSGI = "2.0.19"
redis = "^4.4.2"
fakeredis = "^2.7.1"
types-redis = "^4.4.0.6"
psutil = "^5.9.4"
urllib3 = "<2"
pydantic = "^2.4.2"
types-requests = "^2.31.0.3"

[tool.poetry.dev-dependencies]
connexion = "^2.13.1"
httpretty="^1.1.4"
pytest = "^6.2.5"
pylint = "^2.11.1"
pylint-flask = "^0.6"
git-pylint-commit-hook = "^2.5.1"
autopep8 = "^1.5.7"
docformatter = "^1.4"
pytest-cov = "^3.0.0"
# mypy is a static type checker
mypy = "^1.8.0"
mypy-extensions = "^1.0.0"
isort = "^5.12.0"
pre-commit = "^3.2.1"
bandit = "^1.7.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
